--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,6 +11,17 @@
     margin-top: 60px;
 }
 
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #ffc72c;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right bottom, rgb(0, 0, 0), rgb(1, 118, 152));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right bottom, rgb(0, 0, 0), rgb(1, 118, 152))
+}
+
 
 .center {
     text-align: center;
@@ -22,5 +33,10 @@ a {
 }
 
 a:hover {
-    text-decoration: underline; /* Subrayado al pasar el ratón sobre el enlace */
+    text-decoration: underline;
+}
+
+
+.bg-doi-green {
+    background-color: #017698FF;
 }
