--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,10 +16,10 @@
     background: #ffc72c;
 
     /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right bottom, rgb(0, 0, 0), rgb(1, 118, 152));
+    background: -webkit-linear-gradient(to right, rgb(0, 0, 0), rgb(1, 118, 152));
 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right bottom, rgb(0, 0, 0), rgb(1, 118, 152))
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(1, 118, 152))
 }
 
 
